refact (todo) refactorizar-modelos-y-main